--- a/src/components/Admin/LeaveManagement.css
+++ b/src/components/Admin/LeaveManagement.css
@@ -106,6 +106,15 @@ label {
   padding: 8px;
   font-size: 14px;
 }
+.balance-tab {
+  width: 100%;
+  margin-bottom: 15px;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
 
 .loader-overlay {
   position: fixed;
@@ -195,6 +204,13 @@ label {
   }
   .balance-data table{
     min-width: auto;
+  }
+  .filter-btn{
+    margin-top: 5px;
+  }
+
+  .balance-tab {
+    justify-content: left;
   }
 }
 
