--- a/src/components/Admin/ProjectManagement.css
+++ b/src/components/Admin/ProjectManagement.css
@@ -94,6 +94,16 @@
   display: flex inline !important;
   margin-left: 20px;
 }
+.active-tab {
+  background-color: #2e7d32;
+  color: white;
+  border-color: #2e7d32;
+}
+
+.active-tab:hover {
+  background-color: #1b5e20 !important;
+  border-color: #1b5e20 !important;
+}
 table {
   width: 99.5%;
   border-collapse: collapse;
@@ -199,15 +209,23 @@ th {
   font-size: 18px;
 }
 .clear-filters-btn {
-  background-color: #1976D2;
-  color: white;
-  border: none;
-  padding: 7px 12px;
+  height: 8px !important;
+  width: 100px;
+  border: 2px solid #f44336 ;
+  color: #f44336 ;
+  background-color: white;
+  font-size: small;
   border-radius: 4px;
   cursor: pointer;
+  display: flex;
+  align-items: center;   
+  justify-content: center; 
 }
+
 .clear-filters-btn:hover {
-  background-color: #115293;
+  background-color: #b0412e;
+  color: white;
+  border-color: #b0412e;
 }
 
 
@@ -267,6 +285,9 @@ th {
 
   .tooltip{
     width: 255px;
+  }
+  .clear-filters-btn {
+    width: 156px !important;
   }
 }
 
@@ -372,6 +393,16 @@ th {
     width: 280px;
     margin-left: -10px;
   }
+  .clear-filters-btn {
+    width: 205px !important;
+  }
+
+  .tabs{
+    margin-left: 0 !important;
+  }
+  .tab-button{
+    font-size: small;
+  }
 }
 
 @media (max-width: 375px) {
@@ -396,6 +427,9 @@ th {
   .tooltip{
     width: 270px;
   }
+  .tab-button{
+    max-width: 150px !important;
+  }
 }
 
 @media (max-width: 320px) {
@@ -408,5 +442,8 @@ th {
   .modal-content .add-btn{
     width: 215px;
     margin-left: 0px;
+  }
+  .tab-button{
+    max-width: 70px !important;
   }
 }
