--- a/src/components/Admin/ProjectManagement.css
+++ b/src/components/Admin/ProjectManagement.css
@@ -90,9 +90,34 @@
   margin-bottom: 15px;
   display: inline;
 }
-.tabs {
-  display: flex inline !important;
+.Project-tab{
+  display: flex inline;
+  gap: 10px;
   margin-left: 20px;
+  margin-bottom: 20px;
+}
+.Project-tab-button{
+  padding: 10px 20px;
+  border: 2px solid rgb(161, 157, 157);
+  border-radius: 5px;
+  background-color: #f3f3f3;
+  color: #333;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.Project-tab-button:hover{
+  background-color: #e0e0e0;
+}
+.active-tab {
+  background-color: #2e7d32;
+  color: white;
+  border-color: #2e7d32;
+}
+
+.active-tab:hover {
+  background-color: #1b5e20;
+  border-color: #1b5e20;
 }
 table {
   width: 99.5%;
@@ -199,15 +224,23 @@ th {
   font-size: 18px;
 }
 .clear-filters-btn {
-  background-color: #1976D2;
-  color: white;
-  border: none;
-  padding: 7px 12px;
+  height: 8px !important;
+  width: 100px;
+  border: 2px solid #f44336 ;
+  color: #f44336 ;
+  background-color: white;
+  font-size: small;
   border-radius: 4px;
   cursor: pointer;
+  display: flex;
+  align-items: center;   
+  justify-content: center; 
 }
+
 .clear-filters-btn:hover {
-  background-color: #115293;
+  background-color: #b0412e;
+  color: white;
+  border-color: #b0412e;
 }
 
 
@@ -267,6 +300,9 @@ th {
 
   .tooltip{
     width: 255px;
+  }
+  .clear-filters-btn {
+    width: 156px !important;
   }
 }
 
@@ -372,6 +408,16 @@ th {
     width: 280px;
     margin-left: -10px;
   }
+  .clear-filters-btn {
+    width: 205px !important;
+  }
+
+  .Project-tab{
+    margin-left: 0 !important;
+  }
+  .Project-tab-button{
+    font-size: small;
+  }
 }
 
 @media (max-width: 375px) {
@@ -396,6 +442,9 @@ th {
   .tooltip{
     width: 270px;
   }
+  .Project-tab-button{
+    max-width: 150px !important;
+  }
 }
 
 @media (max-width: 320px) {
@@ -408,5 +457,8 @@ th {
   .modal-content .add-btn{
     width: 215px;
     margin-left: 0px;
+  }
+  .Project-tab-button{
+    max-width: 70px !important;
   }
 }
