--- a/src/components/Navbar/RoleUpdateForm.css
+++ b/src/components/Navbar/RoleUpdateForm.css
@@ -13,12 +13,12 @@
 }
 
 .tabs {
+  margin-left: 0;
   display: flex;
   gap: 10px;
-  margin-bottom: 20px;
 }
 
-.tab-button {
+.tabs-button {
   padding: 10px 20px;
   border: 2px solid #ccc;
   border-radius: 5px;
@@ -29,7 +29,7 @@
   transition: all 0.2s ease-in-out;
 }
 
-.tab-button:hover {
+.tabs-button:hover {
   background-color: #e0e0e0;
 }
 
@@ -37,6 +37,10 @@
   background-color: #2e7d32;
   color: white;
   border-color: #2e7d32;
+}
+.active-tab:hover {
+  background-color: #1b5e20;
+  border-color: #1b5e20;
 }
 
 .filter-section {
@@ -103,10 +107,11 @@
   }
 
   .tabs {
-    margin-left: 25px;
+    width: 100%;
+    justify-content: center;
   }
 
-  .tab-button {
+  .tabs-button {
     max-width: 130px;
   }
 
@@ -165,7 +170,7 @@
     margin-left: 0px;
   }
 
-  .tab-button {
+  .tabs-button {
     width: 129px;
   }
 
@@ -214,7 +219,7 @@
     margin-left: 8px;
   }
 
-  .tab-button {
+  .tabs-button {
     width: 98px;
   }
 
