--- a/src/components/Admin/LeaveManagement.css
+++ b/src/components/Admin/LeaveManagement.css
@@ -1,18 +1,7 @@
 .leave-container {
-  /* max-width: 1200px; */
-  /* width: 90%; */
-  /* margin: 10px auto; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
-  /* margin: 10px auto;
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  background-color: #ffffff;
-  font-family: Arial, sans-serif; */
-   /* border: 1px solid red; */
 }
 
 h1 {
@@ -140,8 +129,8 @@ label {
 }
 
 .adjust-leaves-button{
-    margin-left: 50px !important;
-  }
+  margin-left: 120px !important;
+}
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
@@ -215,6 +204,9 @@ label {
 
   .balance-tab {
     justify-content: left;
+  }
+  .adjust-leaves-button{
+    margin-left: 50px !important;
   }
  
 }
