--- a/src/components/Admin/ProjectManagement.css
+++ b/src/components/Admin/ProjectManagement.css
@@ -27,8 +27,9 @@
   display: flex;
   gap: 2px;
   flex-wrap: wrap;
-  width: 100%;
+  width:100%;
   margin-left: 15px;
+  overflow-x: hidden !important;
 }
 .input-wrapper {
   display: flex;
@@ -243,6 +244,19 @@ th {
   border-color: #b0412e;
 }
 
+.update-btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  width: 90%;
+}
+.update-btn:hover {
+  background-color: #45A049;
+}
 
 /* Responsiveness */
 @media (max-width: 1440px) {
@@ -418,6 +432,9 @@ th {
   .Project-tab-button{
     font-size: small;
   }
+  .update-btn {
+    width: 85%;
+  }
 }
 
 @media (max-width: 375px) {
@@ -445,6 +462,10 @@ th {
   .Project-tab-button{
     max-width: 150px !important;
   }
+
+  .update-btn {
+    width: 83%;
+  }
 }
 
 @media (max-width: 320px) {
@@ -460,5 +481,8 @@ th {
   }
   .Project-tab-button{
     max-width: 70px !important;
+  }
+   .update-btn {
+    width: 80%;
   }
 }
