--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -101,6 +101,23 @@ td {
   margin: 0;
 }
 
+.task-cell {
+  padding: 0;
+  max-width: 150px;
+  text-align: center;
+}
+.task-content{
+  max-height: 100px;
+  max-width: 100%;
+  margin-left: 2px;
+  margin-right: 2px;
+  margin-top: 0;
+  margin-bottom: 0;
+  word-break: break-word;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 .delete-button,
 .save-button {
   background-color: #8f0a00;
@@ -245,5 +262,8 @@ td {
     margin-left: 4px;
     width: 86%;
     max-width: 270px;
+  }
+  .task-cell {
+    max-width: 60px; 
   }
 }
